--- a/templates/master.html
+++ b/templates/master.html
@@ -137,10 +137,16 @@
     #button3:hover{
       background-color:rgb(76, 151, 176) ;
     }
-    #data_table{
+    /* #my_table{
       color: aliceblue;
+      background-color: none;
 
+    } */
+    th{
+      background: none;
+      color: aliceblue;
     }
+  
 
 </style>
 {% csrf_token %}
