--- a/templates/home.html
+++ b/templates/home.html
@@ -6,6 +6,13 @@
 {% block header_block %}
 {% endblock %}
 {% block body_block %}
+
+{% for message in messages %}
+    <div class="alert alert-{{message.tags}} alert-dismissible fade show" role="alert">
+        <strong>Message : </strong>{{message}}
+        <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+    </div>
+{% endfor %}
     <h1 ><b>WELCOME TO RECRUIMENT PORTAL</b></h1>
 
 
