--- a/templates/master.html
+++ b/templates/master.html
@@ -137,17 +137,33 @@
     #button3:hover{
       background-color:rgb(76, 151, 176) ;
     }
-    /* #my_table{
-      color: aliceblue;
-      background-color: none;
-
-    } */
     th{
       background: none;
       color: aliceblue;
     }
+    .dataTables_filter label {
+      color:aliceblue;
+    }
+    #my_table_filter label {
+    display: flex;
+    align-items: center;
+  }
+  .dataTables_length select{
+    margin: 5px ;
+    padding-top: 0px;
+    padding-top: 0px;
+  }
+  .dataTables_length label{
+    color:aliceblue ;
+  }
+  #my_table_length label{
+    display: flex;
+    align-items: center;
+  }
+  #my_table_info {
+    color: aliceblue;
+  }
   
-
 </style>
 {% csrf_token %}
 {% load static %}
@@ -160,6 +176,7 @@
             <li><a href="#"><button id ="button">About</button></a></li>
             <li><a href="#"><button id ="button">Projects</button></a></li>
             {% if username %}
+            
             <li><a href="http://localhost:8000/logout/"><button id ="button" type="submit">Logout</button></a></li>
             {% else %}
             <li><a href="http://localhost:8000/login/"><button id ="button" type="submit">Login</button></a></li>
