--- a/templates/login.html
+++ b/templates/login.html
@@ -33,7 +33,7 @@
                     <td><input type="password" name="password" placeholder="Enter your password "></td>
                 </tr>
             </table>
-            <a href="http://localhost:8000/login/"><button id ="button3" >Login</button></a>
+            <a href="http://localhost:8000/my_login/"><button id ="button3" >Login</button></a>
         </form>
 
     </div>
