--- a/templates/master.html
+++ b/templates/master.html
@@ -177,9 +177,9 @@
             <li><a href="#"><button id ="button">Projects</button></a></li>
             {% if username %}
             
-            <li><a href="http://localhost:8000/logout/"><button id ="button" type="submit">Logout</button></a></li>
+            <li><a href="http://localhost:8000/my_logout/"><button id ="button" type="submit">Logout</button></a></li>
             {% else %}
-            <li><a href="http://localhost:8000/login/"><button id ="button" type="submit">Login</button></a></li>
+            <li><a href="http://localhost:8000/my_login/"><button id ="button" type="submit">Login</button></a></li>
             {% endif %}
         
         </ul>
