--- a/templates/home.html
+++ b/templates/home.html
@@ -13,7 +13,7 @@
         <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
     </div>
 {% endfor %}
-    <h1 ><b>WELCOME TO RECRUIMENT PORTAL</b></h1>
+    <h1 ><b>WELCOME TO RECRUITMENT PORTAL</b></h1>
 
 
 {% endblock %}
